********************************************************

  PageLines Framework Release Notes:  

********************************************************

Version 2.2.2
    - CORE - Added new LESS variable @{plExtendRoot}
    - Bugs - Fixed supersize on fixed width mode

Version 2.2.1
	- CORE - Added Minification option under Advanced tab.
	- Bugs - CSS Minification disabled by default ( fixes a Plesk issue ).
	- Bugs - Fix 'more' link and background in features section.
	- Bugs - Make sure server is Apache before attempting to use rewrites.
	- Bugs - Strip all JS from the CSS/LESS box.
	- Bugs - Do not rewrite CSS if Polylang plugin is active.
	- Bugs - Bootstrap uses important not danger.

Version 2.2
	- NEW - New section! ScrollSpy - Scrolling in-page navigation
	- NEW - New section! Masthead - Giant text, compelling message and buttons
	- NEW - New section! Navbar - Brand new navigation system with themes!
	- NEW - New section! Hero - Quickly give a beautiful overview.
	- NEW - Integration of Twitter Bootstrap (http://twitter.github.com/bootstrap/)
	- NEW - New shortcode system - Modals, Buttons, Etc.. 
	- NEW - Performance enhancements & cleaner source markup.. Oh! and unicorn dust.
	- NEW - Quickslider text options
	- NEW - Fixed navigation bar with four color schemes.
	- NEW - Custom CSS uses dynamic LESS.
	- NEW - LESS system reports errors using adminbar.
	- NEW - Sections style.less file auto loaded.
	- NEW - Child theme style.less auto loaded.
	- NEW - All CSS combined and compiled by LESS then cached.
	- NEW - New PageLines Dashboard.
	- NEW - Upgrade notifications and One Click Upgrades in Dashboard area.
	- NEW - All Plus extensions listed with install buttons in Dashboard.
	- NEW - Moderated Live Chat added to Dashboard ( Plus users ).
	- NEW - Dashboard shows latest community posts, store updates and blog RSS feeds.