@@ -5,8 +5,9 @@
 ********************************************************
 
 Version 2.2.2
-    - CORE - Added new LESS variable @{plExtendRoot}
-    - Bugs - Fixed supersize on fixed width mode
+    - CORE - Added new LESS variable @{plExtendRoot}.
+	- CORE - Added filter pl_dynamic_css_url.
+    - Bugs - Fixed supersize on fixed width mode.
 
 Version 2.2.1
 	- CORE - Added Minification option under Advanced tab.
